Support 1.8 to 1.19